--- a/src/app/cashier-components/cashier-components.component.html
+++ b/src/app/cashier-components/cashier-components.component.html
@@ -166,14 +166,67 @@
                         </div>
 
                         <!-- Empty Cart -->
+                      <!-- Keranjang -->
                         <div *ngIf="cartItems().length === 0" class="text-center py-5 mt-4 bg-light rounded">
-                            <i class="fa-solid fa-cart-shopping fa-3x text-muted mb-3"></i>
-                            <p class="text-muted mb-0">Keranjang masih kosong</p>
-                            <p class="small text-muted">Silakan tambahkan barang dari katalog</p>
+                        <i class="fa-solid fa-cart-shopping fa-3x text-muted mb-3"></i>
+                        <p class="text-muted mb-0">Keranjang masih kosong</p>
+                        <p class="small text-muted">Silakan tambahkan barang dari katalog</p>
                         </div>
 
+                        <!-- Jika ada produk di keranjang -->
+                        <div *ngIf="cartItems().length > 0" class="cart-table-container mt-3">
+                            <table class="table table-striped table-hover align-middle">
+                                    <thead>
+                                    <tr>
+                                        <th>Kode Barang</th>
+                                        <th>Nama Barang</th>
+                                        <th class="text-end">Harga</th>
+                                        <th class="text-center">Qty</th>
+                                        <th class="text-end">Diskon</th>
+                                        <th class="text-end">Sub Total</th>
+                                        <th class="text-center">Aksi</th>     
+                                    </tr>
+                                    </thead>
+                                <tbody>
+                                        <tr *ngFor="let item of cartItems()">
+                                            <td>{{ item.id }}</td>
+                                            
+                                            <td>{{ item.name }}</td>
+                                            
+                                            <td class="text-end">Rp {{ formatRupiah(item.price) }}</td>
+                                            
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center border rounded" style="width: 100px; margin: auto;">
+                                                    <!-- Tombol + -->
+                                                    <button class="btn  border-0 py-0 px-2" type="button" (click)="updateCartItemQuantity(item.id, item.quantity + 1)">
+                                                    <i class="fa-solid fa-plus"></i>
+                                                    </button>
+
+                                                    <!-- Quantity -->
+                                                    <input type="text" class="form-control text-center" [value]="item.quantity" readonly style="background-color: white;">
+
+                                                    <!-- Tombol - -->
+                                                    <button class="btn  border-0 py-0 px-2" type="button" (click)="updateCartItemQuantity(item.id, item.quantity - 1)">
+                                                    <i class="fa-solid fa-minus"></i>
+                                                    </button>
+                                                </div>
+                                            </td>
+                                            
+                                            <td class="text-end">-</td>
+                                            
+                                            <td class="text-end">Rp {{ formatRupiah(item.total) }}</td>
+                                            
+                                            <td class="text-center">
+                                                <button class="btn btn-sm btn-link text-danger py-0 px-2" (click)="computeRemoveItem(item.id)">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </button>
+                                            </td>
+                                        </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </div>
