--- a/src/app/cashier-components/cashier-components.component.html
+++ b/src/app/cashier-components/cashier-components.component.html
@@ -1,10 +1,17 @@
 <c-card>
    <div class="pos-container min-vh-100 p-3">
+    <!-- Notification -->
+<div
+  *ngIf="notificationMessage()"
+  class="notification-popup top-right animate-fade-in"
+>
+  {{ notificationMessage() }}
+</div>
          <!-- Header -->
         <div class="card mb-4 shadow-sm rounded-3 bg-light border-0">
             <div class="card-body d-flex justify-content-between align-items-center flex-wrap py-3 px-4">
             <div class="d-flex align-items-center mb-2 mb-sm-0">
-                <!-- <i class="fa-solid fa-bag-shopping fa-2x text-primary me-3"></i> -->
+                <i class="fa-solid fa-bag-shopping fa-2x text-primary me-3"></i>
                  <h5 class="mb-0 fw-bold text-dark">{{ branchName }}</h5>
             </div>
             <div class="d-flex flex-column flex-sm-row flex-wrap text-end text-sm-start small">
