--- a/src/app/cashier-components/cashier-components.component.scss
+++ b/src/app/cashier-components/cashier-components.component.scss
@@ -80,7 +80,7 @@
   }
 }
 .product-list-container {
-  max-height: 100%; // Atur tinggi maksimal
+  max-height: 96%; // Atur tinggi maksimal
   overflow-y: auto;
   padding-right: 0rem; // space untuk scrollbar
   scroll-behavior: smooth;
@@ -133,4 +133,35 @@
   &::-webkit-scrollbar-track {
     background-color: transparent;
   }
+}
+.notification-popup {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  background-color: #007bff;
+  color: #fff;
+  padding: 0.75rem 1.25rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  font-size: 0.9rem;
+  font-weight: 500;
+  z-index: 1050;
+  opacity: 0.95;
+  transition: all 0.3s ease;
+}
+
+/* Efek animasi fade-in sederhana */
+@keyframes fadeInSlide {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in {
+  animation: fadeInSlide 0.4s ease forwards;
 }
