--- a/src/app/views/widgets/widgets/widgets.component.html
+++ b/src/app/views/widgets/widgets/widgets.component.html
@@ -156,3 +156,24 @@
       </div>
     </c-col>
 </c-row>
+
+<!-- riwayat transaksi -->
+<c-row class="g-4" *ngIf="isActiveRoute('cashier/riwayat-transaksi')">
+     <c-col lg="12" xs="12">
+      <div class="card bg-white shadow-sm rounded p-3">
+        <div class="d-flex align-items-center">
+          <div 
+            class="d-flex align-items-center justify-content-center rounded-circle me-3" 
+            style="width: 50px; height: 50px; background-color: rgba(250, 3, 3, 0.1);"
+          >
+            <svg [cIcon]="icons.cilCreditCard" width="24" height="24" class="text-danger"></svg>
+          </div>
+          <div>
+            <h6 class="fw-semibold">Total Pengeluaran</h6>
+            <p class="mb-0 text-danger small">Rp.</p>
+            <h5 class="fw-bold text-danger mb-0">10.000.000</h5>
+          </div>
+        </div>
+      </div>
+    </c-col>
+</c-row>
