modal cetak components

--- a/src/app/penjualan-components/penjualan-components.component.html
+++ b/src/app/penjualan-components/penjualan-components.component.html
@@ -104,10 +104,10 @@
               <button class="icon-button me-2 color-blue" (click)="onDetailPenjualan()">
                 <i class="fa fa-eye"></i>
               </button>
-              <app-detail-penjualan
+              <app-modal-detail-components
                 [visible]="visibleCreatePengeluaran"
                 (visibleChange)="visibleCreatePengeluaran = $event" >
-              </app-detail-penjualan>
+              </app-modal-detail-components>
 
               <button class="icon-button me-2">
                 <svg [cIcon]="icons.cilPrint" width="16" height="16" class="color-blue"></svg>
