--- a/src/app/authentifications-components/login-components/login-components.component.html
+++ b/src/app/authentifications-components/login-components/login-components.component.html
@@ -9,23 +9,25 @@
                 </div>
 
                 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input 
-                        type="email" 
-                        class="form-control" 
-                        id="email" 
-                        formControlName="email" 
-                        placeholder="nama@email.com" 
-                        [ngClass]="{'is-invalid': f['email'].touched && f['email'].invalid}">
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email / Username</label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            id="email"
+                            formControlName="username_or_email"
+                            placeholder="nama@email.com / username"
+                            [ngClass]="{'is-invalid': f['username_or_email'].touched && f['username_or_email'].invalid}"
+                        />
 
-                        <div class="invalid-feedback" *ngIf="f['email'].touched && f['email'].errors?.['required']">
-                            Email wajib diisi.
+                        <div class="invalid-feedback" *ngIf="f['username_or_email'].touched && f['username_or_email'].errors?.['required']">
+                            Email atau username wajib diisi.
                         </div>
-                        <div class="invalid-feedback" *ngIf="f['email'].touched && f['email'].errors?.['email']">
-                        Format email tidak valid.
+                        <div class="invalid-feedback" *ngIf="f['username_or_email'].touched && f['username_or_email'].errors?.['invalidFormat']">
+                            Format email tidak valid (jika menggunakan email).
                         </div>
-                </div>
+                    </div>
+
 
                 <div class="mb-3">
                     <div class="d-flex justify-content-between align-items-center">
