--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -73,7 +73,7 @@
         </a>
       </li> 
       <li>
-        <a cDropdownItem routerLink="">
+        <a cDropdownItem (click)="onLogout()" >
           <svg cIcon class="me-2" name="cilAccountLogout"></svg>
           Logout
         </a>
