responsive display admin

--- a/src/app/penjualan-components/penjualan-components.component.html
+++ b/src/app/penjualan-components/penjualan-components.component.html
@@ -21,8 +21,8 @@
 
     <app-widgets/>
 
-    <div class="d-flex justify-content-between align-items-center">
-      <div class="mb-0 mt-3 mb-3">
+    <div class="d-flex justify-content-between align-items-center responsive-toolbar">
+      <div class="mb-0 mt-3">
           <form class="position-relative d-inline-block">
             <input
               type="text"
@@ -49,23 +49,28 @@
     </div>
 
     <!-- Form filter dan pencarian -->
-    <form>
+    <form class="responsive-searchbar">
       <div class="d-flex justify-content-between align-items-center">
-        <div class="mb-0 mt-3">
+        <div class="mb-3 mt-3">
           <select class="form-select form-select-sm w-auto">
             <option>5</option>
             <option>10</option>
             <option>25</option>
           </select>
         </div>
+
         <div class="position-relative w-25 mb-3 mt-3">
           <input
             type="text"
-            class="form-control form-control ps-5"
+            class="form-control ps-5"
             placeholder="Cari..."
-          
           />
-          <svg [cIcon]="icons.cilSearch" width="16" height="16" class="position-absolute top-50 start-0 translate-middle-y ms-3 text-secondary"></svg>  
+          <svg
+            [cIcon]="icons.cilSearch"
+            width="16"
+            height="16"
+            class="position-absolute top-50 start-0 translate-middle-y ms-3 text-secondary">
+          </svg>
         </div>
       </div>
     </form>
