--- a/src/app/pengeluaran-components/pengeluaran-components.component.html
+++ b/src/app/pengeluaran-components/pengeluaran-components.component.html
@@ -19,7 +19,7 @@
 
     <app-widgets/>
 
-    <div class="d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-between align-items-cente responsive-toolbar">
         <div class="mt-3 mb-3">
             <form class="position-relative d-inline-block">
               <input
@@ -60,9 +60,9 @@
         </div>
       </div>
     <!-- Form filter dan pencarian -->
-    <form>
+    <form class="responsive-searchbar">
       <div class="d-flex justify-content-between align-items-center">
-        <div class="mb-0 mt-3">
+        <div class="mb-3 mt-3">
           <select class="form-select form-select-sm w-auto">
             <option>5</option>
             <option>10</option>
